--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "React TypeScript Boilerplate",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config ./webpack.prod.config.js",
+    "dev": "webpack serve --config ./webpack.dev.config.js",
+    "start": "node server",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
