--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React TypeScript Boilerplate",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./webpack.prod.config.js",
-    "dev": "webpack serve --config ./webpack.dev.config.js",
-    "start": "node server",
+    "dev": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js",
+    "start": "npm run dev",
+    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js",
+    "prod": "NODE_ENV=production node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
